--- a/css/account.css
+++ b/css/account.css
@@ -16,16 +16,26 @@ html, body { height: 100%; }
 .user_avatar h3, .user_avatar p { font-weight: normal; text-align: center; width: 200%; margin-left: -50%; }
 .user_avatar h3 { margin-top: 2%; font-size: .95em; }
 .user_avatar p { font-size: .75em; }
-.user_banner { background: url('../img/banner_bg.jpg?1436874808') no-repeat 0 0; background-size: 100% 100%; height: 33%; min-height: 187px; position: relative; color: #fff; /* param list */ }
-.user_banner ul { position: absolute; bottom: 0; width: 100%; height: 30%; background: rgba(0, 0, 0, 0.2); }
-.user_banner ul li { width: 25%; height: 100%; float: left; list-style: none; background-repeat: no-repeat; background-position: center 20%; background-size: auto 40%; vertical-align: bottom; text-align: center; font-size: .8em; padding-top: 10%; -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
+.user_banner { background: url('../img/banner_bg.jpg?1436874808') no-repeat 0 0; background-size: 100% 100%; height: 33%; min-height: 187px; position: relative; color: #fff; /* param list */ /* dashi logo */ }
+.user_banner > label, .user_banner > h2 { padding: 14px 0 0 20px; display: block; }
+.user_banner > label { font-size: .8em; }
+.user_banner > h2 { font-size: 2em; font-weight: lighter; line-height: 1em; }
+.user_banner ul { position: absolute; bottom: 0; width: 100%; height: 30%; background: rgba(0, 0, 0, 0.2); /* account in usr center */ }
+.user_banner ul.pure-g { background: none; height: 40px; bottom: 12px; }
+.user_banner ul li { width: 25%; height: 100%; float: left; list-style: none; background-repeat: no-repeat; background-position: center 20%; background-size: auto 40%; vertical-align: bottom; text-align: center; font-size: .8em; padding-top: 10%; -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; /* account in usr center */ }
 .param-basic { background-image: url('../img/icon1.png?1436876037'); }
 .param-vip { background-image: url('../img/icon2.png?1436876066'); }
 .param-privilege { background-image: url('../img/icon3.png?1436876098'); }
 .param-activity { background-image: url('../img/icon4.png?1436876139'); }
-.user_main { text-align: center; width: 100%; background: #ddd; height: 67%; min-height: 360px; padding: 5% 0; -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; position: relative; }
+.user_banner ul li.pure-u-13-24, .user_banner ul li.pure-u-11-24 { padding: 0 0 0 20px; text-align: left; }
+.user_banner ul li.pure-u-13-24 p, .user_banner ul li.pure-u-11-24 p { position: absolute; bottom: 0; }
+.user_banner ul li.pure-u-13-24 { width: 54.1667%; }
+.user_banner ul li.pure-u-11-24 { width: 45.8333%; border-left: 1px solid rgba(255, 255, 255, 0.3); }
+.promote_logo { height: 100%; -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; text-align: center; padding: 5% 0; }
+.promote_logo img { height: 100%; width: auto; display: block; margin: 0 auto; }
+.user_main { text-align: center; width: 100%; background: #f4f4f4; height: 67%; min-height: 360px; padding: 5% 0; -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; position: relative; }
 .user_sec { text-align: left; width: 88%; background: #fff; margin: 0 auto 5%; -moz-border-radius: 5px; -webkit-border-radius: 5px; border-radius: 5px; }
-.user_sec div { border-top: 1px solid #ddd; color: #666; height: 36px; line-height: 36px; padding: 0px 10px; font-size: .95em; position: relative; }
+.user_sec div { border-top: 1px solid #f4f4f4; color: #666; height: 36px; line-height: 36px; padding: 0px 10px; font-size: .95em; position: relative; }
 .user_sec div:first-child { border-top: none; }
 .user_sec div i { height: 36px; width: 30px; background-repeat: no-repeat; background-position: 0 center; background-size: auto 60%; display: inline-block; vertical-align: top; }
 .icon-finance { background-image: url('../img/icon8.png?1436876483'); }
@@ -37,6 +47,8 @@ html, body { height: 100%; }
 .user_sec div i:after { content: ">"; font-style: normal; font-family: "simsun"; color: #ddd; position: absolute; right: 8px; }
 .user_sec div span { color: #ddd; padding-left: 20%; font-size: .8em; }
 .user_sec div span em { color: #fe8f86; font-style: normal; }
+.user_sec div label { color: #ddd; }
+.user_sec div p { display: inline; padding-left: 20px; }
 .user_main_cards { padding: 10px 0; height: 100%; -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
 .user_card, .user_card_add, .user_card_tip { width: 92%; height: 65px; margin: 5px auto 12px; padding: 5px 8px; font-size: 0.8em; -moz-border-radius: 2px; -webkit-border-radius: 2px; border-radius: 2px; -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
 .user_card { position: relative; color: #fff; background: #f55f60 url('../img/bankcard_bg1.jpg?1437874985') no-repeat 0 0; background-size: 100% auto; -moz-border-radius: 2px; -webkit-border-radius: 2px; border-radius: 2px; }
@@ -51,5 +63,6 @@ html, body { height: 100%; }
 .user_card_add span { font-size: 2em; vertical-align: top; height: 53px; display: inline-block; line-height: 53px; }
 .user_card_tip { padding: 5px 0; }
 .user_main_btn { background: #0d8fdb; border: 2px solid #0d8fdb; padding: 0; color: #fff; height: 36px; line-height: 32px; display: block; width: 84%; border-radius: 5px; margin: 0 auto 12px; }
+.user_main_btn:hover { color: #fff; }
 .user_main_btn_hollow { background: #fff; color: #0d8fdb; }
 .user_main_btn.ab_bottom { position: absolute; bottom: 1.3em; left: 0; width: 88%; margin: 0 6%; }
