--- a/css/account.css
+++ b/css/account.css
@@ -10,7 +10,7 @@ a, a:visited, a:hover, a:active { color: inherit; text-decoration: none; }
 
 html, body { height: 100%; }
 
-.user { /* avatar sec */ /* banner section */ /* main body */ /* sections under main body */ /* bankcards list section*/ /* bankcard single item */ /* normal and hollowed button with ab_bottom to locate at the bottom of the page*/ }
+.user { /* avatar sec */ /* banner section */ /* main body */ /* activity history sections under main body */ /* sections under main body */ /* bankcards list section*/ /* bankcard single item */ /* normal and hollowed button with ab_bottom to locate at the bottom of the page*/ }
 .user_avatar { width: 25%; margin: 0 auto; padding: 10px 0; color: #fff; }
 .user_avatar .pure-img { border: 2px solid #fff; -moz-border-radius: 50%; -webkit-border-radius: 50%; border-radius: 50%; -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
 .user_avatar h3, .user_avatar p { font-weight: normal; text-align: center; width: 200%; margin-left: -50%; }
@@ -41,7 +41,9 @@ html, body { height: 100%; }
 .user_main .pure-table-horizontal td { width: 33.3333%; }
 .user_main .pure-table-horizontal span { color: #ddd; display: block; }
 .user_about { height: 100%; }
-.user_sec { text-align: left; width: 88%; background: #fff; margin: 0 auto 5%; -moz-border-radius: 5px; -webkit-border-radius: 5px; border-radius: 5px; }
+.user_history { font-size: .9em; text-align: left; -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; padding: 1.5%; width: 92%; -moz-box-shadow: 0px 0px 3px #666; -webkit-box-shadow: 0px 0px 3px #666; box-shadow: 0px 0px 3px #666; margin: 0 auto 3%; color: #666; }
+.user_history p { margin-top: 1.5%; }
+.user_sec { font-size: .9em; text-align: left; width: 88%; background: #fff; margin: 0 auto 5%; -moz-border-radius: 5px; -webkit-border-radius: 5px; border-radius: 5px; }
 .user_sec div { border-top: 1px solid #f4f4f4; color: #666; height: 36px; line-height: 36px; padding: 0px 10px; font-size: .95em; position: relative; background: url('../img/right_arrow.jpg?1438010328') no-repeat 95% center; background-size: auto 40%; }
 .user_sec div:first-child { border-top: none; }
 .user_sec div i { height: 36px; width: 30px; background-repeat: no-repeat; background-position: 0 center; background-size: auto 60%; display: inline-block; vertical-align: top; /* &:after { content: ">"; font-style: normal; font-family: "simsun"; color: #ddd; position: absolute; right: 8px;
@@ -77,4 +79,5 @@ html, body { height: 100%; }
 .user_main_btn { background: #0d8fdb; border: 2px solid #0d8fdb; padding: 0; color: #fff; height: 36px; line-height: 32px; display: block; width: 84%; border-radius: 5px; margin: 0 auto 12px; }
 .user_main_btn:hover { color: #fff; }
 .user_main_btn_hollow { background: #fff; color: #0d8fdb; }
+.user_main_btn_hollow:hover { color: #0d8fdb; }
 .user_main_btn.ab_bottom { position: absolute; bottom: 1.3em; left: 0; width: 88%; margin: 0 6%; }
