--- a/css/sass/account.scss
+++ b/css/sass/account.scss
@@ -213,8 +213,23 @@ body {
     &_about{
         height:100%;
     }
+    /* activity history sections under main body */
+    &_history{
+        font-size:.9em;
+        text-align: left;
+        @include box-sizing(border-box);
+        padding:1.5%;
+        width:92%;
+        @include box-shadow(0px 0px 3px #666);
+        margin:0 auto 3%;
+        color: #666;
+        p{
+            margin-top: 1.5%;
+        }
+    }
     /* sections under main body */
     &_sec {
+        font-size:.9em;
         text-align: left;
         width: 88%;
         background: #fff;
@@ -402,6 +417,9 @@ body {
         &_hollow {
             background: #fff;
             color: $btn_blue;
+            &:hover {
+                color: $btn_blue;
+            }
         }
         &.ab_bottom {
             position: absolute;
